--- a/exercises/dj-js/styles.css
+++ b/exercises/dj-js/styles.css
@@ -3,12 +3,11 @@
   width:500px;
   background-color:purple;
   hover: blue;
-
 }
 
 /*.square:hover {
   background-color: blue;
-}
- .square:active {
+}*/
+ /*.square:active {
    background-color: red;
  }*/
