--- a/exercises/html-practice/styles.css
+++ b/exercises/html-practice/styles.css
@@ -1,13 +1,3 @@
-.box {
-  height: 500px;
-  width: 500px;
-  background-color: black;
-}
-
-@media (min-width:500px) and (max-width: 800px) {
-  .box {
-    height: 100px;
-    width: 100px;
-    background-color: red;
-    }
-}
+.navbar-default {
+    background-color: rgba(162, 103, 15, 0.62);
+    border-color: #dc0707;
