--- a/projects/css-zen-garden/styles.css
+++ b/projects/css-zen-garden/styles.css
@@ -1,13 +1,112 @@
-.greenSpace {
+.greenSpaceTop {
   background: url("huntington.jpg");
-  background-repeat: no-repeat;
+  background-attachment: fixed, scroll;
+  background-image: url("contours.png"), url("noise.png"), url("gridlines.png"), url("huntington.jpg");
+  background-size: auto, auto, auto, cover;
+  background-position: -1px -25px, 0 50%;
   height: 230px;
+  text-align: center;
+  position: relative;
+}
+
+h1::before {
+  display: inline-block;
+  position: relative;
+  width: 75px;
+  height: 75px;
+  margin: 0px 16px -15px 0px;
+  background: url(enso.svg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  opacity: 0.5;
+  content: "";
 }
 
 h1 {
   margin-top: 0px;
+  padding-top: 30px;
+  padding-bottom: 5px;
+}
+
+.italic {
+  font-style: italic;
+  margin: 0px 0px 0px 112px;
+}
+
+h3 {
+  margin-left: 10%;
+  font-weight: 200;
+}
+
+.demonstration {
+  width: 80%;
+  margin-left: 10%;
+  margin-top: 25px;
+}
+
+.link {
+  color: #809b7e;
+}
+
+.link::before {
+  content: url("glyphicon-circle-down.htm");
+}
+
+.link:hover {
+  padding: 3px;
+  border: 1px solid green;
+  background-color: green;
+}
+
+.enlightenment {
+  width: 80%;
+  margin-left: 10%;
+}
+
+.about {
+  width: 80%;
+  margin-left: 10%;
+}
+
+.participation {
+  width: 80%;
+  margin-left: 10%;
+}
+
+.benefits {
+  width: 80%;
+  margin-left: 10%;
+}
+
+.requirements {
+  width: 80%;
+  margin-left: 10%;
+}
+
+p {
+  margin: .5em;
+  line-height: 1.75;
+}
+
+.lightGreen {
+  background-color: rgba(138,188,159,0.5);
 }
 
 .dotUnderline {
   border-bottom: 1px dotted #000;
+}
+
+.greenSpaceBot {
+  height: 170px;
+      background-image: url(contours.png), url(gridlines.png), url(noise.png), url(koi.jpg);
+}
+
+.drkGreenSpace {
+  background-color: #325050;
+  height: 100px;
+}
+
+.bottomLinks {
+  background-color: lightgreen;
+  height: 200px;
 }
