--- a/projects/css-zen-garden/styles.css
+++ b/projects/css-zen-garden/styles.css
@@ -26,6 +26,7 @@ h1 {
   margin-top: 0px;
   padding-top: 30px;
   padding-bottom: 5px;
+  font-family: 'Julius Sans One', sans-serif;
 }
 
 .italic {
@@ -107,6 +108,11 @@ p {
 }
 
 .bottomLinks {
-  background-color: lightgreen;
-  height: 200px;
+  width: 50%;
+  margin-left: 80px;
+  padding: 15px;
+}
+
+span.italic {
+  margin-left: 0;
 }
