--- a/projects/high-score-haven/src/components/Grid/Grid.css
+++ b/projects/high-score-haven/src/components/Grid/Grid.css
@@ -3,7 +3,7 @@
 	flex-wrap: wrap;
 	min-width: 360px;
 	max-width: 80vh;
-	height: 100vw;
+	height: 100%;
     max-height: 80vh;
     min-height: 360px;
 }
